--- a/Constant.gs.sample
+++ b/Constant.gs.sample
@@ -2,3 +2,8 @@ var BACKLOG_API_KEY = 'XXX';
 var BACKLOG_DOMAIN = 'xxx.backlog.jp';
 
 var SLACK_INCOMING_HOOK_URL = 'https://url';
+
+/**
+ * You can set channel and private message, "#something" and "@somebody".
+ */
+var SLACK_CHANNEL = "#something";
